# cloud-downloader

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  qml.qrc
app/qml/: TableRowDelegate.qml  main.qml
app/src/: Application.cpp  Application.hpp  DownloaderModel.cpp  DownloaderModel.hpp  main.cpp
libclouddownload/: CMakeLists.txt
libclouddownload/src/: CloudDownloaderFactory.hpp  ICloudConfig.hpp  ICloudDownloader.hpp  IUploadHandler.hpp  UploadParams.cpp  UploadParams.hpp
libclouddownload/src/google/: GoogleCloudConfig.cpp  GoogleCloudConfig.hpp  GoogleCloudDownloader.cpp  GoogleCloudDownloader.hpp  GoogleUploadHandler.cpp  GoogleUploadHandler.hpp
